# motion_editor

./: CMakeLists.txt  LICENSE  README.md  package.xml
motion/: test_motion.yaml
motion_editor/: motion_editor.cpp  motion_editor.hpp
test_code/: test.cpp
