<package format="3">
  <name>motion_editor</name>
  <version>0.0.1</version>
  <description>YAML motion file editor (ROS2/ament build)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <build_depend>ament_index_cpp</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
